--- a/index.html
+++ b/index.html
@@ -4,46 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding 1 | MUST 4707</title>
+    <script src="script.js"></script>
 </head>
 <body>
 <h1>Coding 1 | MUST 4707</h1>
 
 <h2>Modifying an Existing Object</h2>
 <p>In this assignment, you will update the file <code>script.js</code> and commit it to your assignment repository. Your task will be to add <strong>two new properties</strong> to an existing object and test your work using the JavaScript Console in the browser.</p>
-
 <hr>
 
 <h3>Accessing the Assignment Materials</h3>
 <ol>
-    <li>Navigate to the assignment repository in the course <a href="https://github.com/MUST4707" target="_blank">GitHub organization</a>.</li>
-    <li>Click on the green <code>Use this template</code> button in the top-right corner.</li>
-    <li>Choose <strong>Create a new repository</strong>.</li>
+    <li>Navigate to the assignment repository in the course <a href="https://github.com/MUST4707">GitHub organization</a></li>
+    <li>Click on the green <code>Use this template</code> button in the top right corner.</li>
+    <li>Choose 'Create a new repository'</li>
     <li>Set up the repo name under your account.</li>
-    <li>Click <code>Create repository</code>.</li>
+    <li>Click <code>Create repository</code></li>
 </ol>
+
 <p><em>You should now be at your own personal repository with the assignment materials.</em></p>
 <ol start="6">
-    <li>Click on the green <code>&lt;&gt; Code</code> button and select <strong>Open with GitHub Desktop</strong>.</li>
+    <li>Click on the green <code>&lt;&gt; Code</code> button and select <code>Open with GitHub Desktop</code></li>
 </ol>
-<p><em>You should now be in your GitHub Desktop application that has a pop-up window called 'Clone a Repository.'</em></p>
+
+<p><em>You should now be in your GitHub Desktop application that has a pop-up window called 'Clone a Repository'</em></p>
+
 <ol start="7">
     <li>Make sure the local path is where you would like to save this repo.</li>
-    <li>Hit <code>Clone</code>.</li>
-    <li>You should now be able to click the <code>Open in Visual Studio Code</code> button or navigate to your files and open the folder in Visual Studio Code.</li>
-    <li>After you finish working on your project, please return to GitHub Desktop and:
+    <li>Hit <code>Clone</code></li>
+    <li>You should now click the <code>Open in Visual Studio Code</code> button or navigate to your files and open the folder in Visual Studio Code.</li>
+    <li>After you finish working on your project please return to GitHub Desktop and
         <ol type="a">
-            <li>Commit your changes to the <code>master</code> branch (don't forget to add a summary description).</li>
-            <li>Click on the <code>Push Origin</code> button to sync your commit with the GitHub cloud.</li>
+            <li>Commit your changes to the <code>master</code> (don’t forget to add a summary description)</li>
+            <li>Click on the <code>Push Origin</code> to sync your commit with the GitHub cloud.</li>
         </ol>
     </li>
 </ol>
 
-<hr>
-
 <h3>Task Description</h3>
 <ol>
-    <li>The provided <code>script.js</code> contains an object called <code>exampleObject</code> with a few properties already defined.</li>
-    <li>Your task is to add <strong>two new properties</strong> to <code>exampleObject</code>:
+    <li>The provided <code>script.js</code> contains an object called <code>song</code> with a few properties already defined.</li>
+    <li>Your task is to add <strong>two new properties</strong> to <code>song</code>:
         <ul>
             <li>A property named <code>releaseYear</code> that contains a number (e.g., <code>2023</code>).</li>
             <li>A property named <code>isAvailable</code> that contains a boolean value (<code>true</code> or <code>false</code>).</li>
@@ -51,20 +52,21 @@
     </li>
     <li>After adding these properties, make sure they meet the requirements listed below and pass the provided tests.</li>
 </ol>
-
 <hr>
 
 <h3>Coding Instructions</h3>
 <p>You will add your code between these comments in <code>script.js</code>:</p>
-<pre><code>//↓↓↓↓↓↓↓↓↓↓↓↓YOUR CODE goes below here↓↓↓↓↓↓↓↓↓↓↓↓
+<pre>
+<code>//↓↓↓↓↓↓↓↓↓↓↓↓YOUR CODE goes below here↓↓↓↓↓↓↓↓↓↓↓↓
 
 let song = {
    title: "Apple",
    album: "Brat"
 }
 
-//↑↑↑↑↑↑↑↑↑↑YOUR CODE goes above here↑↑↑↑↑↑↑↑↑↑</code></pre>
-<p><em>This is where you will type your code. Edit the song object.</em></p>
+//↑↑↑↑↑↑↑↑↑↑YOUR CODE goes above here↑↑↑↑↑↑↑↑↑↑
+</code>
+    </pre>
 
 <hr>
 
@@ -79,52 +81,52 @@ let song = {
     </li>
     <li>Save your changes and commit the file in GitHub Desktop.</li>
 </ol>
-
 <hr>
 
 <h3>Testing Your Work</h3>
-<h4>Testing (Using VS Code and Your Browser)</h4>
+
+<h4>Testing (Using VS Code and your Browser)</h4>
 <ol>
     <li>Make sure you have saved all of your files, then click on the <code>index.html</code> file.</li>
-    <li>Click on "Go Live."</li>
-    <li>Once the browser window opens with the assignment webpage, open the JavaScript Console.</li>
-    <li>Run the following tests to make sure there are no errors:
+    <li>Click on "Go Live"</li>
+    <li>Once the browser window opens with the assignment webpage, open the JavaScript Console</li>
+    <li>Run the following test to make sure there are no errors.
         <ol>
-            <li><strong>Test 1:</strong> <code>song</code>
+            <li>Test 1: <code>song</code>
                 <ul>
-                    <li>Result: <code>{title: 'Apple', album: 'Brat', releaseYear: 2023, isAvailable: false}</code></li>
+                    <li>the result should be <code>{title: 'Apple', album: 'Brat', releaseYear: 2023, isAvailable: false}</code></li>
                 </ul>
             </li>
-            <li><strong>Test 2:</strong> <code>typeof song</code>
+            <li>Test 2: <code>typeof song</code>
                 <ul>
-                    <li>Result: <code>'object'</code></li>
+                    <li>result: <code>'object'</code></li>
                 </ul>
             </li>
-            <li><strong>Test 3:</strong> <code>song.releaseYear</code>
+            <li>Test 3: <code>song.releaseYear</code>
                 <ul>
-                    <li>Result: <code>'2023'</code> (it should match your input for <code>releaseYear</code>).</li>
+                    <li>result: <code>'2023'</code> (it should be whatever you put in for the release year)</li>
                 </ul>
             </li>
-            <li><strong>Test 4:</strong> <code>typeof song.releaseYear</code>
+            <li>Test 4: <code>typeof song.releaseYear</code>
                 <ul>
-                    <li>Result: <code>'number'</code></li>
+                    <li>result: <code>'number'</code></li>
                 </ul>
             </li>
-            <li><strong>Test 5:</strong> <code>song.isAvailable</code>
+            <li>Test 5: <code>song.isAvailable</code>
                 <ul>
-                    <li>Result: <code>false</code> (it should match your input for <code>isAvailable</code>).</li>
+                    <li>result: <code>false</code> (it should be whatever boolean you put in for the availability)</li>
                 </ul>
             </li>
-            <li><strong>Test 6:</strong> <code>typeof song.isAvailable</code>
+            <li>Test 6: <code>typeof song.isAvailable</code>
                 <ul>
-                    <li>Result: <code>'boolean'</code></li>
+                    <li>result: <code>boolean</code></li>
                 </ul>
             </li>
         </ol>
     </li>
 </ol>
-<p><em>If any of the above commands return an error or an unexpected result, please return to your code and update to fix the error. Repeat this process until there are no errors.</em></p>
 
+<p><em>If any of the above commands return an error or an unexpected result, please return to your code and update to fix the error. Repeat this process until there are no errors.</em></p>
 <hr>
 
 <h3>Submission Steps</h3>
@@ -132,13 +134,16 @@ let song = {
     <li>Upload your <code>script.js</code> to the Canvas assignment.</li>
 </ol>
 
-<hr>
-
 <h3>Grading Criteria</h3>
 <p>The following criteria will be checked:</p>
 <ol>
-    <li>The <code>releaseYear</code> property exists and is a number.</li>
-    <li>The <code>isAvailable</code> property exists and is a boolean.</li>
+    <li><code>song</code> exists</li>
+    <li><code>song</code> is an <code>'object'</code></li>
+    <li>The <code>releaseYear</code> property exists.</li>
+    <li>The <code>releaseYear</code> property type is a number.</li>
+    <li>The <code>isAvailable</code> property exists.</li>
+    <li>The <code>isAvailable</code> property type is a boolean.</li>
 </ol>
+<hr>
 </body>
 </html>
